--- a/labweb/templates/labweb/awards.html
+++ b/labweb/templates/labweb/awards.html
@@ -34,6 +34,9 @@
               <div class="card-body">
                 <h5 class="card-title">{{award.awards_title}}</h5>
                 <p class="card-text">{{award.awrad_contents}}</p>
+                <a href="{{award.award_link}}" class="card-link">
+                  [link]
+                </a>
                 <p class="card-text"><small class="text-muted">{{award.award_dates|date:"d F Y"}}</small></p>
               </div>
             </div>
