--- a/labweb/static/css/home2.css
+++ b/labweb/static/css/home2.css
@@ -10,7 +10,12 @@
       padding: 0;
       box-sizing: border-box;
     }
-    
+    /* .col {
+      display: flex;
+      flex-direction: column;
+      justify-content: center; 
+      width: auto !important;
+  } */
     body {
       font-family: "Big Caslon Medium", sans-serif;
       font-size: 15px;
@@ -19,17 +24,20 @@
     
      .title{
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 100vh;
         position: relative;
         background-color: whitesmoke;
-        text-align: center;
         padding: 0 2em;
+      }
+  
+      p{
+        display: inline-block !important;
       }
 
       .title h1{
+        display: inline-block !important;
         font-family: "Big Caslon Medium", sans-serif;
         font-size: 5vw;
         margin: 0;
@@ -38,10 +46,24 @@
         color: #332e28;
         transition: all 0.3s ease;
         z-index: 3;
+        text-align: right !important;
+        display:flex;
       }
+    
+      .header-row {
+        position: relative !important;
+        display: flex !important;
+        justify-content: space-between !important;
+        align-items: start !important;
+        width: 100%;
+        padding: 50px; /* 이 값을 조정해서 원하는 간격을 만들 수 있습니다 */
+        
+      }
+    
+    
       h1:hover {
         transform: translate3d(0, -10px, 22px);
-        color: #ff0266;
+        color: #9f9183;
       }
       
       h3.span {
@@ -51,11 +73,7 @@
         font-weight: 300;
         color: #332e28;
         z-index: 4;
-      }
-      span:hover {
-        color: #ff0266;
-        font-weight: 500;
-        font-size: 2.2vw;
+        text-align: center;
       }
       
       a {
@@ -71,7 +89,7 @@
         z-index: -1;
       }
       .container {
-        position: fixed;
+        position: relative;
         top: 0;
         width : 100%;
         z-index:50;
@@ -91,6 +109,13 @@
           font-size: 3vw;
         }
       }
+
+      @media (max-width: 800px) {
+        .dropdownmenu a {
+          font: bold 16px/24px sans-serif;
+        }
+      }
+      
       
       @media only screen and (min-width: 360px) {
         .title h1 {
