--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/home/#">
           <img src="/static/brain.png" width="30" height="30" class="d-inline-block align-top" alt="">
           INES
         </a>
