--- a/labweb/templates/labweb/home.html
+++ b/labweb/templates/labweb/home.html
@@ -1,3 +1,4 @@
+<!-- OLD version -->
 <head>
     <link rel="stylesheet" href="/static/css/home.css">
     <script src="/static/js/particles.js/src/particles.js"></script>
