--- a/labweb/templates/labweb/test.html
+++ b/labweb/templates/labweb/test.html
@@ -1,82 +1,351 @@
 <head>
-    <link rel="stylesheet" href="/static/css/home2.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-   
-    
-    <script src="/static/js/particles.js/src/particles.js"></script>
-    <script src="/static/js/home.js"></script>
 
 </head>
+
 <body>
-    <div>
-        <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-            <a class="navbar-brand" href="#">iNES</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                <!-- HOME -->
-                <li class="nav-item active">
-                  <a class="nav-link" href="./homev2.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-           
-                <!--About US-->
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                    About Us
-                  </a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="./member.html">People</a>
-                    <a class="dropdown-item" href="./history.html">History</a>
-                    <a class="dropdown-item" href="#">AI team Blog</a>
-                  </div>
-                </li>
+<!-- x
+    <h1>Menu 1</h1>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    
+    <nav class="menu">
+      <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open"/>
+      <label class="menu-open-button" for="menu-open">
+        <span class="hamburger hamburger-1"></span>
+        <span class="hamburger hamburger-2"></span>
+        <span class="hamburger hamburger-3"></span>
+      </label>
+      
+      <a href="#" class="menu-item"> <i class="fa fa-bar-chart"></i> </a>
+      <a href="#" class="menu-item"> <i class="fa fa-plus"></i> </a>
+      <a href="#" class="menu-item"> <i class="fa fa-heart"></i> </a>
+      <a href="#" class="menu-item"> <i class="fa fa-envelope"></i> </a>
+      
+      
+    </nav>
+  
+    <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+        <defs>
+          <filter id="shadowed-goo">
+              
+              <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
+              <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+              <feGaussianBlur in="goo" stdDeviation="3" result="shadow" />
+              <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow" />
+              <feOffset in="shadow" dx="1" dy="1" result="shadow" />
+              <feComposite in2="shadow" in="goo" result="goo" />
+              <feComposite in2="goo" in="SourceGraphic" result="mix" />
+          </filter>
+          <filter id="goo">
+              <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
+              <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+              <feComposite in2="goo" in="SourceGraphic" result="mix" />
+          </filter>
+        </defs>
+    
+    </svg>
+-->
+    <h1>Menu2</h1>
 
-                <!--Research-->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                      Research
-                    </a>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Research Topic</a>
-                      <a class="dropdown-item" href="./projects.html">Project</a>
-                    </div>
-                </li>
-
-                <!--Publications-->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                        Publications
-                    </a>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Conference</a>
-                      <a class="dropdown-item" href="./publication.html">Journal</a>
-                    </div>
-                </li>
-
-                <!--Board-->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                        Board
-                    </a>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="./awards.html">Award</a>
-                      <a class="dropdown-item" href="./gallery.html">GAllery</a>
-                    </div>
-                </li>
-
-                <!--Contact Us-->
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact Us</a>
-                  </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
+    <nav class="menu2">
+      <input type="checkbox" href="#" class="menu-open2" name="menu-open" id="menu-open"/>
+      <label class="menu-open-button2" for="menu-open">
+        <span class="hamburger2 hamburger-11"></span>
+        <span class="hamburger2 hamburger-12"></span>
+        <span class="hamburger2 hamburger-13"></span>
+      </label>
+      
+      <a href="#" class="menu-item2"> <i class="fa fa-bar-chart"></i> </a>
+      <a href="#" class="menu-item2"> <i class="fa fa-plus"></i> </a>
+      <a href="#" class="menu-item2"> <i class="fa fa-heart"></i> </a>
+      <a href="#" class="menu-item2"> <i class="fa fa-envelope"></i> </a>
+      <a href="#" class="menu-item2"> <i class="fa fa-cog"></i> </a>
+    
+    </nav>
+    
+    
+    <!-- filters -->
+    <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+        <defs>
+          <filter id="shadowed-goo">
+              
+              <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
+              <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+              <feGaussianBlur in="goo" stdDeviation="3" result="shadow" />
+              <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow" />
+              <feOffset in="shadow" dx="1" dy="1" result="shadow" />
+              <feBlend in2="shadow" in="goo" result="goo" />
+              <feBlend in2="goo" in="SourceGraphic" result="mix" />
+          </filter>
+          <filter id="goo">
+              <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
+              <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+              <feBlend in2="goo" in="SourceGraphic" result="mix" />
+          </filter>
+        </defs>
+    </svg>
 
 
-</body>  
+<style>
+
+    @import "compass/css3";
+ body {
+	 background: whitesmoke;
+	 color: 332e28;
+	 text-align: center;
+}
+ a {
+	 color: inherit;
+}
+ h1, h2, h3, h4 {
+	 margin: 0;
+	 margin-bottom: 10px;
+	 margin-top: 10px;
+}
+ h1 {
+	 font-size: 3em;
+}
+ .menu {
+	 filter: url('#shadowed-goo');
+}
+ .menu-item, .menu-open-button {
+	 background: #332e28;
+	 border-radius: 100%;
+	 width: 80px;
+	 height: 80px;
+	 margin-left: -40px;
+	 position: absolute;
+	 top: 20px;
+	 color: white;
+	 text-align: center;
+	 line-height: 80px;
+	 transform: translate3d(0, 0, 0);
+	 transition: transform ease-out 200ms;
+}
+.menu-item i {
+    position: relative;
+    top: 30px;
+}
+ .menu-open {
+	 display: none;
+}
+ .hamburger {
+	 width: 25px;
+	 height: 3px;
+	 background: white;
+	 display: block;
+	 position: absolute;
+	 top: 50%;
+	 left: 50%;
+	 margin-left: -12.5px;
+	 margin-top: -1.5px;
+	 transition: transform 200ms;
+}
+ .hamburger-1 {
+	 transform: translate3d(0, -8px, 0);
+}
+ .hamburger-2 {
+	 transform: translate3d(0, 0, 0);
+}
+ .hamburger-3 {
+	 transform: translate3d(0, 8px, 0);
+}
+ .menu-open:checked + .menu-open-button .hamburger-1 {
+	 transform: translate3d(0, 0, 0) rotate(45deg);
+}
+ .menu-open:checked + .menu-open-button .hamburger-2 {
+	 transform: translate3d(0, 0, 0) scale(0.1, 1);
+}
+ .menu-open:checked + .menu-open-button .hamburger-3 {
+	 transform: translate3d(0, 0, 0) rotate(-45deg);
+}
+ .menu {
+	 position: absolute;
+	 left: 50%;
+	 margin-left: -80px;
+	 padding-top: 20px;
+	 padding-left: 80px;
+	 width: 650px;
+	 height: 150px;
+	 box-sizing: border-box;
+	 font-size: 20px;
+	 text-align: left;
+}
+ .menu-item:hover {
+	 background: white;
+	 color: #ffc107;
+}
+ .menu-item:nth-child(3) {
+	 transition-duration: 180ms;
+}
+ .menu-item:nth-child(4) {
+	 transition-duration: 180ms;
+}
+ .menu-item:nth-child(5) {
+	 transition-duration: 180ms;
+}
+ .menu-item:nth-child(6) {
+	 transition-duration: 180ms;
+}
+ .menu-open-button {
+	 z-index: 2;
+	 transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	 transition-duration: 400ms;
+	 transform: scale(1.1, 1.1) translate3d(0, 0, 0);
+	 cursor: pointer;
+}
+ .menu-open-button:hover {
+	 transform: scale(1.2, 1.2) translate3d(0, 0, 0);
+}
+ .menu-open:checked + .menu-open-button {
+	 transition-timing-function: linear;
+	 transition-duration: 200ms;
+	 transform: scale(0.8, 0.8) translate3d(0, 0, 0);
+}
+ .menu-open:checked ~ .menu-item {
+	 transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+ .menu-open:checked ~ .menu-item:nth-child(3) {
+	 transition-duration: 170ms;
+	 transform: translate3d(80px, 0, 0);
+}
+ .menu-open:checked ~ .menu-item:nth-child(4) {
+	 transition-duration: 250ms;
+	 transform: translate3d(160px, 0, 0);
+}
+ .menu-open:checked ~ .menu-item:nth-child(5) {
+	 transition-duration: 330ms;
+	 transform: translate3d(240px, 0, 0);
+}
+ .menu-open:checked ~ .menu-item:nth-child(6) {
+	 transition-duration: 410ms;
+	 transform: translate3d(320px, 0, 0);
+}
+ /**Menu2 */
+
+ .menu2 {
+	 filter: url('#shadowed-goo');
+}
+ .menu-item2, .menu-open-button2 {
+	 background: #332e28;
+	 border-radius: 100%;
+	 width: 80px;
+	 height: 80px;
+	 margin-left: -40px;
+	 position: absolute;
+	 top: 80px;
+	 color: white;
+	 text-align: center;
+	 line-height: 80px;
+	 transform: translate3d(0, 0, 0);
+	 transition: transform ease-out 200ms;
+}
+ .menu-open2 {
+	 display: none;
+}
+ .hamburger2 {
+	 width: 25px;
+	 height: 3px;
+	 background: white;
+	 display: block;
+	 position: absolute;
+	 top: 50%;
+	 left: 50%;
+	 margin-left: -12.5px;
+	 margin-top: -1.5px;
+	 transition: transform 200ms;
+}
+ .hamburger-11 {
+	 transform: translate3d(0, -8px, 0);
+}
+ .hamburger-12 {
+	 transform: translate3d(0, 0, 0);
+}
+ .hamburger-13 {
+	 transform: translate3d(0, 8px, 0);
+}
+ .menu-open2:checked + .menu-open-button2 .hamburger-11 {
+	 transform: translate3d(0, 0, 0) rotate(45deg);
+}
+ .menu-open2:checked + .menu-open-button2 .hamburger-12 {
+	 transform: translate3d(0, 0, 0) scale(0.1, 1);
+}
+ .menu-open2:checked + .menu-open-button2 .hamburger-13 {
+	 transform: translate3d(0, 0, 0) rotate(-45deg);
+}
+ .menu2 {
+	 position: absolute;
+	 left: 50%;
+	 margin-left: -190px;
+	 padding-top: 20px;
+	 padding-left: 190px;
+	 width: 380px;
+	 height: 250px;
+	 box-sizing: border-box;
+	 font-size: 20px;
+	 text-align: left;
+}
+ .menu-item2:hover {
+	 background: white;
+	 color: #ff4081;
+}
+ .menu-item2:nth-child(3) {
+	 transition-duration: 70ms;
+}
+ .menu-item2:nth-child(4) {
+	 transition-duration: 130ms;
+}
+ .menu-item2:nth-child(5) {
+	 transition-duration: 190ms;
+}
+ .menu-item2:nth-child(6) {
+	 transition-duration: 250ms;
+}
+ .menu-item2:nth-child(7) {
+	 transition-duration: 310ms;
+}
+ .menu-open-button2 {
+	 z-index: 2;
+	 transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	 transition-duration: 400ms;
+	 transform: scale(1.1, 1.1) translate3d(0, 0, 0);
+	 cursor: pointer;
+}
+ .menu-open-button2:hover {
+	 transform: scale(1.2, 1.2) translate3d(0, 0, 0);
+}
+ .menu-open2:checked + .menu-open-button2 {
+	 transition-timing-function: linear;
+	 transition-duration: 200ms;
+	 transform: scale(0.8, 0.8) translate3d(0, 0, 0);
+}
+ .menu-open:checked ~ .menu-item2 {
+	 transition-timing-function: cubic-bezier(0.935, 0, 0.34, 1.33);
+}
+ .menu-open2:checked ~ .menu-item2:nth-child(3) {
+	 transition-duration: 160ms;
+	 transform: translate3d(cos(0.1)*115px, sin(0.1)*115px, 0);
+}
+ .menu-open2:checked ~ .menu-item2:nth-child(4) {
+	 transition-duration: 240ms;
+	 transform: translate3d(cos(0.835)*115px, sin(0.835)*115px, 0);
+}
+ .menu-open2:checked ~ .menu-item2:nth-child(5) {
+	 transition-duration: 320ms;
+	 transform: translate3d(cos(1.57)*115px, sin(1.57)*115px, 0);
+}
+ .menu-open2:checked ~ .menu-item2:nth-child(6) {
+	 transition-duration: 400ms;
+	 transform: translate3d(cos(2.305)*115px, sin(2.305)*115px, 0);
+}
+ .menu-open2:checked ~ .menu-item2:nth-child(7) {
+	 transition-duration: 480ms;
+	 transform: translate3d(cos(3.04)*115px, sin(3.04)*115px, 0);
+}
+ 
+
+
+
+</style>
+
+
+</body>
