6/22 main page feedback

--- a/labweb/static/css/home2.css
+++ b/labweb/static/css/home2.css
@@ -75,6 +75,11 @@
         z-index: 4;
         text-align: center;
       }
+
+      .m2 {
+        font-size: 1.5vw !important;
+        letter-spacing: 0.5em;
+      }
       
       a {
         text-decoration: none;
