publications - journal & confernece

--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
        <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">iNES</a>
+        <a class="navbar-brand" href="/home/#">iNES</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,10 +49,10 @@
                 ABOUT US
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">People</a></li>
-                <li><a class="dropdown-item" href="#">History</a></li>
+                <li><a class="dropdown-item" href="/member/#">People</a></li>
+                <li><a class="dropdown-item" href="/history/#">History</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">iNES Blog</a></li>
+                <li><a class="dropdown-item" href="https://kojungbeom.github.io/">iNES Blog</a></li>
               </ul>
             </li>
 
@@ -62,18 +62,18 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Research Topic</a></li>
-                  <li><a class="dropdown-item" href="#">Project</a></li>
+                  <li><a class="dropdown-item" href="/projects/#">Project</a></li>
                 </ul>
               </li>
 
             
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="/publication/journal" role="button" data-toggle="dropdown" aria-expanded="false">
                PUBLICATION
             </a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Conference</a></li>
-                <li><a class="dropdown-item" href="#">Journal</a></li>
+                <li><a class="dropdown-item" href="/publication/journal">Journal</a></li>
+                <li><a class="dropdown-item" href="/publication/conference">Conference</a></li>
             </ul>
             </li>
 
@@ -82,8 +82,8 @@
                   BOARDS
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Award</a></li>
-                  <li><a class="dropdown-item" href="#">Gallery</a></li>
+                  <li><a class="dropdown-item" href="/awards/#">Award</a></li>
+                  <li><a class="dropdown-item" href="/gallery/#">Gallery</a></li>
     
                 </ul>
             </li>
