--- a/labweb/templates/labweb/conference.html
+++ b/labweb/templates/labweb/conference.html
@@ -30,27 +30,28 @@
 {% block content %}
   <div class="container">
     <ul class="border-top border-bottom border-dark mt-2 md-2 p-0" style="width: 100%; text-align:center">
-      <li style=" display:inline-block;"><h3>Journal</h3></li>
+      <li style=" display:inline-block;"><h3>Conference</h3></li>
     </ul>
     <div>
-      {% if Publication_list %}
+      {% if conferences %}
         {%for year in years%}
-          <div class="year">
-            <h4 style="font-weight: bold"> {{year}}</h4>
-          </div>
-          {%for pub in Publication_list%}
-            {% if pub.year == year %}
+            <div class="year">
+                <h4 style="font-weight: bold"> {{year}}</h4>
+            </div>
+          {%for con in conferences%}
+            {% if con.year == year %}
             <div class="card  border-0" style="padding-left: 80px;" >
               <div class="card-body">
-                <p class="card-title" style="font-weight: bold; font-size:18px;">{{pub.pub_name}}</p>
-                <p class="card-text">{{pub.pub_author}}, <span style="font-style: italic">{{pub.pub_publisher}}</span>, {{ pub.pub_dates| date:"F Y"}}. </p>
-                <a href="{{pub.pub_pdf_path}}" class="card-link">[link]</a>
+                <p class="card-title" style="font-weight: bold; font-size:18px;">{{con.conf_name}}</p>
+                <p class="card-text">{{con.conf_author}}, {{ con.conf_dates| date:"F Y"}}. </p>
+                <a href="{{con.conf_pdf_path}}" class="card-link">[link]</a> <a href="{{con.conf_publisher}}" class="card-link">[publisher]</a>
               </div>
             </div>
-            {% endif %}
+           
+               {% endif %}
+            {% endfor %}
           {% endfor %}
-        {% endfor %}
-      {% endif %}
+        {% endif %}
     </div>
   </div>
   
