research topic (not picture yet)

--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -38,9 +38,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height: 100px;">
-            <li class="nav-item active">
+            <!-- <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
+            </li> -->
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
             </li> -->
@@ -61,7 +61,7 @@
                   RESEARCH
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Research Topic</a></li>
+                  <li><a class="dropdown-item" href="/projects/topic">Research Topic</a></li>
                   <li><a class="dropdown-item" href="/projects/#">Project</a></li>
                 </ul>
               </li>
