--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -32,7 +32,7 @@
   <body>
     <div class="container">
        <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="/home/#">iNES</a>
+        <a class="navbar-brand" href="/home/#"><img src="/static/images/logo/LAB_LOGO.png" alt="로고" width="200em" height="auto"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -96,7 +96,7 @@
       </nav>
 
       <!--slide image-->
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -121,7 +121,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </button>
-      </div>
+      </div> -->
       <!--<img src="/static/car.jpg" class="img-fluid mx-auto d-block" alt="Responsive image" style="width: 100%;">-->
     </div>
     {% block content %}
