--- a/labweb/templates/labweb/gallery.html
+++ b/labweb/templates/labweb/gallery.html
@@ -19,6 +19,7 @@
               <div class="card-body">
                 <h5 class="card-title">{{photo.photo_title}}</h5>
                 <p class="card-text">{{photo.photo_context}} </p>
+                <p class="card-text">{{photo.photo_dates|date:"Y-m-d"}} </p>
               </div>
             </div>
           </div>
