--- a/labweb/templates/labweb/research_topic.html
+++ b/labweb/templates/labweb/research_topic.html
@@ -13,10 +13,12 @@
 <div class="container py-5">
     <!-- For Demo Purpose -->
     <header class="text-center">
+      <br><br><br>
         <a href="/projects/#" class="fw-700 text-decoration-none mb-3 mt-3 d-inline-block"> go to  posts <i class="fa fa-arrow-right"></i></a>
       <h1 class="display-4 font-weight-bold">iNES AI team Resarch Main Topic</h1>
       <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
-    </header>
+    </header>     
+
   
   
     <!-- DEMO 1 -->
@@ -26,7 +28,7 @@
       <div class="row">
         <!-- DEMO 1 Item-->
         <div class="col-lg-6  m-0 p-0">
-          <div class="hover hover-1 text-white "><img src="https://bootstrapious.com/i/snippets/sn-img-hover/hoverSet-3.jpg" alt="">
+          <div class="hover hover-1 text-white " style="overflow:hidden;"><img src="/static/images/research_topic/computer vision.jpg" alt="" style="width: 110%; height: 100%; object-fit: cover;">
             <div class="hover-overlay"></div>
             <div class="hover-1-content px-5 py-4">
               <h3 class="hover-1-title text-uppercase font-weight-bold mb-0"> <span class="font-weight-light">Computer </span>Vision</h3>
@@ -35,8 +37,8 @@
           </div>
         </div>
         <!-- DEMO 1 Item-->
-        <div class="col-lg-6 m-0 p-0">
-          <div class="hover hover-1 text-white"><img src="https://bootstrapious.com/i/snippets/sn-img-hover/hoverSet-4.jpg" alt="">
+        <div class="col-lg-6 m-0 p-0" >
+          <div class="hover hover-1 text-white" style="overflow:hidden;"><img src="/static/images/research_topic/NLP3.jpg" alt="" style="width: 110%; height: 100%;  object-fit: cover;">
             <div class="hover-overlay"></div>
             <div class="hover-1-content px-5 py-4">
               <h3 class="hover-1-title text-uppercase font-weight-bold mb-0"> <span class="font-weight-light">Natural Language </span>Processing</h3>
@@ -48,7 +50,7 @@
         
          <!-- DEMO 1 Item-->
          <div class="col-lg-6  m-0 p-0">
-            <div class="hover hover-1 text-white "><img src="https://bootstrapious.com/i/snippets/sn-img-hover/hoverSet-3.jpg" alt="">
+          <div class="hover hover-1 text-white" style="overflow:hidden;"><img src="/static/images/research_topic/SP4.jpeg" alt="" style=" width: 110%; height: 100%;  object-fit: cover;">
               <div class="hover-overlay"></div>
               <div class="hover-1-content px-5 py-4">
                 <h3 class="hover-1-title text-uppercase font-weight-bold mb-0"> <span class="font-weight-light">Signal </span>Processing</h3>
@@ -59,7 +61,7 @@
 
            <!-- DEMO 1 Item-->
          <div class="col-lg-6  m-0 p-0">
-            <div class="hover hover-1 text-white "><img src="https://bootstrapious.com/i/snippets/sn-img-hover/hoverSet-3.jpg" alt="">
+          <div class="hover hover-1 text-white" style="overflow:hidden;"><img src="/static/images/research_topic/web2.jpg" alt="" style="width: 110%; height: 100%;  object-fit: cover;">
               <div class="hover-overlay"></div>
               <div class="hover-1-content px-5 py-4">
                 <h3 class="hover-1-title text-uppercase font-weight-bold mb-0"> <span class="font-weight-light">Database-driven </span>Web Service</h3>
