--- a/labweb/static/css/history.css
+++ b/labweb/static/css/history.css
@@ -27,7 +27,7 @@ h1 {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .timeline ul {
-  background: #c1d7e4;
+  background: #fff;
   padding: 50px 0;
 }
 
@@ -37,7 +37,7 @@ h1 {
   width: 6px;
   margin: 0 auto;
   padding-top: 50px;
-  background: #fff;
+  background: #f2eff6;
 }
 
 .timeline ul li::after {
@@ -57,7 +57,7 @@ h1 {
   bottom: 0;
   width: 400px;
   padding: 15px;
-  background: #fff;
+  background: #f2eff6;
 }
 
 .timeline ul li div::before {
@@ -77,7 +77,7 @@ h1 {
 .timeline ul li:nth-child(odd) div::before {
   left: -15px;
   border-width: 8px 16px 8px 0;
-  border-color: transparent #fff transparent transparent;
+  border-color: transparent #f2eff6 transparent transparent;
 }
 
 .timeline ul li:nth-child(even) div {
@@ -88,7 +88,7 @@ h1 {
 .timeline ul li:nth-child(even) div::before {
   right: -15px;
   border-width: 8px 0 8px 16px;
-  border-color: transparent transparent transparent #fff;
+  border-color: transparent transparent transparent #f2eff6;
 }
 
 time {
@@ -108,7 +108,7 @@ time {
 
 /*연표 원*/
 .timeline ul li.in-view::after {
-  background: #fff;
+  background: #f2eff6;
 }
 
 .timeline ul li div {
@@ -158,6 +158,6 @@ time {
   .timeline ul li:nth-child(even) div::before {
     left: -15px;
     border-width: 8px 16px 8px 0;
-    border-color: transparent #F45B69 transparent transparent;
+    border-color: transparent #f2eff6 transparent transparent;
   }
 } 
