--- a/labweb/templates/labweb/awards.html
+++ b/labweb/templates/labweb/awards.html
@@ -21,10 +21,13 @@
 
 
 {% block content %}
-  <div class="container">
-    <ul class="border-top border-bottom border-dark mt-2 md-2 p-0" style="width: 100%; text-align:center">
-      <li style=" display:inline-block;"><h3> Award-Winning </h3></li>
-    </ul>
+  <div class="container py-5">
+      <header class="text-center">
+      <br><br><br>
+      <h1 class="display-4 font-weight-bold">Award-Winning</h1>
+      <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
+    </header>
+    
     <div class="row">
       {% if award_list %}
           {%for award in award_list%}
