--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -3,6 +3,8 @@
     <title>INES LAB</title>
     {% block style %}
     {% endblock %}
+    <link rel="stylesheet" href="/static/css/navbar.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <style>
       @font-face{
@@ -24,13 +26,42 @@
         object-fit: cover; /* 이미지의 가로세로 비율을 유지하며, 이미지가 빈 공간을 채우도록 함 */
       }
 
-    </style>
+    </style>   
+    <!-- <script src="static/js/navbar.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+    <script>
+      (function($) { "use strict";
+
+      $(function() {
+        var header = $(".start-style");
+        $(window).scroll(function() {    
+          var scroll = $(window).scrollTop();
+        
+          if (scroll >= 10) {
+            header.removeClass('start-style').addClass("scroll-on");
+          } else {
+            header.removeClass("scroll-on").addClass('start-style');
+          }
+        });
+      });		
+          $('body').on('mouseenter mouseleave','.nav-item',function(e){
+          if ($(window).width() > 750) {
+            var _d=$(e.target).closest('.nav-item');_d.addClass('show');
+            setTimeout(function(){
+            _d[_d.is(':hover')?'addClass':'removeClass']('show');
+            },1);
+          }
+      });	
+      })(jQuery); 
+    </script>
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container">
        <nav class="navbar navbar-expand-lg navbar-light ">
         <a class="navbar-brand" href="/home/#"><img src="/static/images/logo/LAB_LOGO.png" alt="로고" width="200em" height="auto"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,12 +69,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height: 100px;">
-            <!-- <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li> -->
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li> -->
+  
+
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                 ABOUT US
@@ -94,8 +121,67 @@
           </form>
         </div>
       </nav>
-
-      <!--slide image-->
+    -->
+    
+      <div class="navigation-wrap bg-light start-header start-style">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <nav class="navbar navbar-expand-md navbar-light">
+                    
+                        <!-- <a class="navbar-brand" href="https://front.codes/" target="_blank"><img src="https://assets.codepen.io/1462889/fcy.png" alt=""></a>	 -->
+                        <a class="navbar-brand" href="/home/#" ><img src="/static/images/logo/Logo2.png" alt="" ></a>	
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ml-auto py-4 py-md-0">
+                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="/member/filter">People</a>
+                                        <a class="dropdown-item" href="/history/#">History</a>
+                                        <hr class="dropdown-divider">
+                                        <a class="dropdown-item" href="https://kojungbeom.github.io/">iNES AI team Blog</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Research</a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="/projects/topic">Research Topic</a>
+                                        <a class="dropdown-item" href="/projects/#">Project</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Publication</a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="/publication/journal">Journal</a>
+                                        <a class="dropdown-item" href="/publication/conference">Conference</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Boards</a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="/awards/#">Award</a>
+                                        <a class="dropdown-item" href="/gallery/#">Gallery</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                    <a class="nav-link" href="/contact/#">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                        
+                    </nav>		
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <a href="https://front.codes/" class="logo fixed-bottom" target="_blank">
+      <img src="https://assets.codepen.io/1462889/fcy.png" alt="">
+  </a> -->
+    <!--slide image-->
       <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -123,8 +209,8 @@
         </button>
       </div> -->
       <!--<img src="/static/car.jpg" class="img-fluid mx-auto d-block" alt="Responsive image" style="width: 100%;">-->
-    </div>
     {% block content %}
     {% endblock %}  
+  
   </body>
 </html>
