--- a/labweb/templates/labweb/conference.html
+++ b/labweb/templates/labweb/conference.html
@@ -19,19 +19,19 @@
   .card-body p, a{
     line-height: 1.0; /* 줄간격 값 조정 */
   }
-  .container {
-    font-family: "Big Caslon Medium", sans-serif;
-
-  }
+  
 </style>
 
 {% endblock %}
 
 {% block content %}
-  <div class="container">
-    <ul class="border-top border-bottom border-dark mt-2 md-2 p-0" style="width: 100%; text-align:center">
-      <li style=" display:inline-block;"><h3>Conference</h3></li>
-    </ul>
+  <div class="container py-5">
+      <header class="text-center">
+      <br><br><br>
+      <h1 class="display-4 font-weight-bold">Conference</h1>
+      <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
+    </header>
+    
     <div>
       {% if conferences %}
         {%for year in years%}
