--- a/labweb/templates/labweb/contact.html
+++ b/labweb/templates/labweb/contact.html
@@ -7,17 +7,18 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container">
+<div class="container py-5">
+		<header class="text-center">
+		<br><br><br><br><br><br>
+		<h1 class="display-4 font-weight-bold">Contact</h1>
+		<h1>Drop Us a Mail</h1>
+		<p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
+		
+	</header>
+  
     <div class="innerwrap">
 		
-			<section class="section1 clearfix">
-				<div class="textcenter">
-					<ul class="border-top border-bottom border-dark mt-2 md-2 p-0" style="width: 100%; text-align:center">
-            <li style=" display:inline-block;"><h3>Contact Us</h3></li>
-          </ul>
-					<h1>Drop Us a Mail</h1>
-				</div>
-			</section>
+
       
 			<section class="section2 clearfix">
         <!--map-->
@@ -31,7 +32,7 @@
 						<div class="sec2addr">
 							<p>Gachon University, AI Department. 1342 Seongnamdaero, Sujeonggu, Seongnam,. Gyeonggido 13120, Republic of Korea.
                             </p>
-							<p><span class="collig">Phone :</span> +82-32-820-4253(수정해야할듯요)</p>
+							<p><span class="collig">Phone :</span> +82-32-820-4253</p>
 							<p><span class="collig">Email :</span> Jungsuk@gachon.ac.kr</p>
 							<p><span class="collig">Fax :</span> +82-32-820-4449</p>
 						</div>
