--- a/labweb/templates/labweb/detail.html
+++ b/labweb/templates/labweb/detail.html
@@ -10,118 +10,123 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="overflow-hidden">
-	<div class="container position-relative">
-		<article class="z-index-1 position-relative">
-            {% if article %}
-
-			<header class="py-7">
-                
-                <a href="/projects/#" class="fw-700 text-decoration-none mb-3 mt-3 d-inline-block"> <i class="fa fa-arrow-left"></i> All posts</a>
-                <h1 class="headline" style="font-weight: 700;"> {{article.article_name}}</h1>
-
-                <div class="row" style="width: auto; " >
-                    <div class="col-md-10" style="display: flex; justify-content: left;  align-items: center;">
-                        <p class="article-tags" style="margin-top: 1.5em; display: flex; justify-content: center;">
-                            {% for keyword in keywords %}
-                            <span class="tag rounded-pill me-2 fw-700 bg-white shadow-lg py-2 px-3 small mr-2" >{{ keyword }}</span>
-                            {% endfor %}
-                        </p>
-                    </div>
-                    <div class="col-md-2 d-flex align-items-start mr-0  "  style="width: min-content; justify-content: right;">
-                        <div class="link-buttons d-flex justify-content-center">
-                            <ul class="wrapper d-flex align-items-start">
-            
-                                <li class="icon github" >
-                                    <span class="tooltip">Github</span>
-                                    <a href="{{article.article_github}}" class="icon-link">
-                                        <span><i class="fab fa-github"></i></span>
-                                        </a>
-                                </li>
-                        
-                                <li class="icon paper">
-                                    <span class="tooltip">Paper</span>
-                                    <a href="{{article.article_paper_link}}" class="icon-link">
-                                        <span><i class="fas fa-sticky-note"></i></span>
-                                    </a>
-                                </li>
-                            
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-				
-               
-			</header>
-
-            <!-- Author & Dates -->
-			<div class="article-meta d-flex justify-content-between mb-6">
-				<div id="author" class="center-v"style="display: inline-block;">
-					<p class="byline fw-700 mb-0">by {{article.article_author}}</p>
-				</div>
-
-				<p class="dateline mb-0 fw-700">{{article.article_dates|date:"Y-m-d"}}</p>
-			</div>
-
-			<main>
-				<section class="mb-7">
-					<div class="row">
-						<div class="col-md-8">
-							<p class="lead mb-0 pb-3 mt-3" style="font-weight: bold;">
-                                Abstract.
-                            </p>
-						</div>
-					</div>
-
-					<div class="row row-cols-1 text-body">
-						<div class="col">
-							<p>{{article.article_abstract}}</p>
-						</div>
-
+<div class="container py-5">
+    <header class="text-center">
+		<br><br><br>
 		
-                        <!-- Image Part -->
-						<div class="col">
-							<figure><img class="img-fluid" src="{{article.article_photo_path}}" alt="a smiling person in a pink hoodie, standing in front of a bright pink lighted arcade basketball game. " />
-							</figure>
+	</header>
+	<div class="overflow-hidden">
+		
+		<div class="container position-relative">
+			<article class="z-index-1 position-relative">
+				{% if article %}
+
+				<header class="py-7">
+					
+					<a href="/projects/#" class="fw-700 text-decoration-none mb-3 mt-3 d-inline-block"> <i class="fa fa-arrow-left"></i> All posts</a>
+					<h1 class="headline" style="font-weight: 700;"> {{article.article_name}}</h1>
+
+					<div class="row" style="width: auto; " >
+						<div class="col-md-10" style="display: flex; justify-content: left;  align-items: center;">
+							<p class="article-tags" style="margin-top: 1.5em; display: flex; justify-content: center;">
+								{% for keyword in keywords %}
+								<span class="tag rounded-pill me-2 fw-700 bg-white shadow-lg py-2 px-3 small mr-2" >{{ keyword }}</span>
+								{% endfor %}
+							</p>
+						</div>
+						<div class="col-md-2 d-flex align-items-start mr-0  "  style="width: min-content; justify-content: right;">
+							<div class="link-buttons d-flex justify-content-center">
+								<ul class="wrapper d-flex align-items-start">
+				
+									<li class="icon github" >
+										<span class="tooltip">Github</span>
+										<a href="{{article.article_github}}" class="icon-link">
+											<span><i class="fab fa-github"></i></span>
+											</a>
+									</li>
+							
+									<li class="icon paper">
+										<span class="tooltip">Paper</span>
+										<a href="{{article.article_paper_link}}" class="icon-link">
+											<span><i class="fas fa-sticky-note"></i></span>
+										</a>
+									</li>
+								
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					
+				
+				</header>
+
+				<!-- Author & Dates -->
+				<div class="article-meta d-flex justify-content-between mb-6">
+					<div id="author" class="center-v"style="display: inline-block;">
+						<p class="byline fw-700 mb-0">by {{article.article_author}}</p>
+					</div>
+
+					<p class="dateline mb-0 fw-700">{{article.article_dates|date:"Y-m-d"}}</p>
+				</div>
+
+				<main>
+					<section class="mb-7">
+						<div class="row">
+							<div class="col-md-8">
+								<p class="lead mb-0 pb-3 mt-3" style="font-weight: bold;">
+									Abstract.
+								</p>
+							</div>
 						</div>
 
-                        <!-- Architecture Part -->
+						<div class="row row-cols-1 text-body">
+							<div class="col">
+								<p>{{article.article_abstract}}</p>
+							</div>
+
+			
+							<!-- Image Part -->
+							<div class="col">
+								<figure><img class="img-fluid" src="{{article.article_photo_path}}" alt="a smiling person in a pink hoodie, standing in front of a bright pink lighted arcade basketball game. " />
+								</figure>
+							</div>
+
+							<!-- Architecture Part -->
+							<div class="col">
+								<p class="lead mb-0 pb-3 mt-3 "  style="font-weight: bold;">
+									Architecture.
+								</p>
+								<figure><img class="img-fluid" src="{{article.article_architecture_path}}" alt="a smiling person in a pink hoodie, standing in front of a bright pink lighted arcade basketball game. " />
+									<figcaption class="small text-muted mt-2">{{article.article_name}}</figcaption>
+								</figure>
+							</div>
+						</div>
+					</section>
+				
+					
+				</main>
+				{% endif %}
+			</article>
+	<!-- 
+			<div class="bg">
+				<div class="container h-100">
+					<div class="row row-cols-3 h-100">
 						<div class="col">
-                            <p class="lead mb-0 pb-3 mt-3 "  style="font-weight: bold;">
-                                Architecture.
-                            </p>
-							<figure><img class="img-fluid" src="{{article.article_architecture_path}}" alt="a smiling person in a pink hoodie, standing in front of a bright pink lighted arcade basketball game. " />
-								<figcaption class="small text-muted mt-2">{{article.article_name}}</figcaption>
-							</figure>
+							<div class="border-start border-end h-100"></div>
+						</div>
+						<div class="col">
+							<div class="border-start border-end h-100"></div>
+						</div>
+						<div class="col">
+							<div class="border-start border-end h-100"></div>
 						</div>
 					</div>
-				</section>
-			
-				
-			</main>
-            {% endif %}
-		</article>
-<!-- 
-		<div class="bg">
-			<div class="container h-100">
-				<div class="row row-cols-3 h-100">
-					<div class="col">
-						<div class="border-start border-end h-100"></div>
-					</div>
-					<div class="col">
-						<div class="border-start border-end h-100"></div>
-					</div>
-					<div class="col">
-						<div class="border-start border-end h-100"></div>
-					</div>
 				</div>
-			</div>
-		</div> -->
+			</div> -->
+		</div>
 	</div>
 </div>
-
 
 <script src="https://example.com/fontawesome/v5.15.4/js/all.js" data-auto-a11y="true" ></script>
 
