--- a/labweb/templates/labweb/history.html
+++ b/labweb/templates/labweb/history.html
@@ -7,10 +7,15 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container">
-    <ul class="border-top border-bottom border-dark mt-2 md-2 p-0" style="width: 100%; text-align:center">
-      <li style=" display:inline-block;"><h3>iNES HISTORY</h3></li>
-    </ul>
+<div class="container py-5">
+    <header class="text-center">
+    <br><br><br>
+    <h1 class="display-4 font-weight-bold">History</h1>
+
+    <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
+      <br><br>
+  </header>
+    
         <section class= "timeline">
           <ul>
           {% if historys %}
