--- a/labweb/templates/labweb/homev2.html
+++ b/labweb/templates/labweb/homev2.html
@@ -9,42 +9,33 @@
       <link rel="stylesheet" href="/static/css/home2.css">
   
       <!--font-->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Raleway:ital,wght@0,700;1,300;1,800&family=Roboto+Mono&display=swap" rel="stylesheet">
-          
+
       <!-- bootstrap -->
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-  
+        <script src="static/js/particle2.js"></script>
       <script src="/static/js/particles.js/src/particles.js"></script>
-      <script src="/static/js/home.js"></script>
+      <!-- <script src="/static/js/home.js"></script> -->
   
-      <style>
-        @font-face {
-            font-family: 'BookkMyungjo-Bd';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/BookkMyungjo-Bd.woff2') format('woff2');
-            font-weight: 700;
-            font-style: normal;
-        }
-    </style>
   </head>
   <body>
+    <div id="particles-js"></div>
+
           <section class="title" >
             <div class="container px-lg-5 " style="display: flex; flex-direction: column; ">
               <div class="row row-cols-1">
                   <div class="col" style="width: auto; display: inline-block;">
-                      <div class="row" style="display: flex; justify-content: center;">
+                      <div class="row" style="display: flex; justify-content: center; ">
                           <!-- <div class="col-1 py-1 px-lg-2" style="display: flex;justify-content: flex-end;"> -->
                             <h1>iNES</h1>
                           <!-- </div> -->
                          
             
                           <!-- <div class="col-1 d-flex justify-content-center " style="width:100%"> -->
-                            <div class="row row-cols-1 " style="width: min-content;">
+                            <div class="row row-cols-1 " style="width: min-content; padding-left: 10px;">
                                 <div class="col " style="display: flex; align-items: flex-end;">
                                     <nav class="menu" style="display: inline-block; display: flex; flex-direction: column; justify-content: center;" >
                                         <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open-1"/>
@@ -120,6 +111,5 @@
           </svg>
         
       
-        <canvas class="background"></canvas>
   
   </body>  
