--- a/labweb/templates/labweb/homev2.html
+++ b/labweb/templates/labweb/homev2.html
@@ -16,14 +16,12 @@
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-        <script src="static/js/particle2.js"></script>
+  
       <script src="/static/js/particles.js/src/particles.js"></script>
-      <!-- <script src="/static/js/home.js"></script> -->
+      <script src="/static/js/home.js"></script>
   
   </head>
   <body>
-    <div id="particles-js"></div>
-
           <section class="title" >
             <div class="container px-lg-5 " style="display: flex; flex-direction: column; ">
               <div class="row row-cols-1">
@@ -111,5 +109,6 @@
           </svg>
         
       
+        <canvas class="background"></canvas>
   
   </body>  
