--- a/labweb/templates/labweb/member.html
+++ b/labweb/templates/labweb/member.html
@@ -3,68 +3,82 @@
 
 
 {% block style %}
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/static/css/member.css">
   <style>
     
-    .card-img-top {
-      height: 300px; /* set the height of the image container */
-      object-fit: cover; /* crop and scale the image to fit the container */
-    }
-    .card-img-top:hover {
-      content: var(--hover-image);
-    }
+    
+
   </style>
 {% endblock %}
 {% block content %}
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  
 
   <div class="container py-5">
     <header class="text-center">
-      <br><br><br>
+      <br><br><br> <br><br><br>
       <h1 class="display-4 font-weight-bold">Member</h1>
-      <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
-    </header>
+      <p class="font-italic text-muted mb-0">Let me introduce the member of our lab. </p>
+      <br><br><br>
     
     <div class="row">
       <div style="padding: 5px;">
-        <button type="button" class="btn btn-light"><a href="{% url 'filter_by_degree' %}" style="color: black; font-weight:500; text-decoration: none;"> All</a> </button>
-
+        <button type="button" class="btn btn-light degree-button" id="button" onclick="change_btn(event)" >
+          <a href="{% url 'filter_by_degree' %}"  class="degree-link"> 
+            All
+          </a> 
+        </button>
+        
       
       </div>
-      
+      <br><br><br>
 
-      {% if degrees %}
+      <!-- {% if degrees %}
       {% for degree in degrees %}
         <div style="padding: 5px;">
-          <button type="button" class="btn btn-light"><a href="{% url 'filter_by_degree' %}?degree={{degree}}" style="color: black; font-weight:500; text-decoration: none;"> {{degree}}</a></button>
+          <button type="button" class="btn btn-light button"><a href="{% url 'filter_by_degree' %}?degree={{degree}}" style=" color: rgb(83, 83, 83); font-weight:400; text-decoration: none; " > {{degree}}</a></button>
         </div>
       
       {% endfor %}
       
-      <div style="clear: both;">
-        <h3 >{{selected_degree}}</h3>
-      </div>
-      
-      {%endif%}
+      {%endif%} -->
+      {% if degrees %}
+      {% for degree in degrees %}
+          <div style="padding: 5px;">
+              <button type="button" class="btn btn-light degree-button" id="button" onclick="change_btn(event)">
+                  <a href="{% url 'filter_by_degree' %}?degree={{degree}}" class="degree-link">
+                      {{degree}}
+                  </a>
+              </button>
+          </div>
+        {% endfor %}
+    {% endif %}
+  
+
       <hr/>
       <br><br>
       
       {% if member_list %}
         {% for member in member_list %}
-      
-          <div class="col-md-4 mb-4">
-            <div class="card">
-                <img class="card-img-top" src="{{member.ID_photo_path_text}}" alt="Card image" style="--hover-image: url({{member.second_photo_path}})">
-              <div class="card-body">
-                <h4 class="card-title" style="display: inline-block; ">{{member.name_text}}</h4>
-                <h6 class="card-text" style="display: inline-block; color:gray; font-size: 1em;">{{member.degree}}</h6>
-                <p class="card-text" style="font-size: 0.9em; ">{{member.department}}</p>
-                <hr class="dropdown-divider">
+        <!-- border-style: none; -->
+          <div class="card mb-3 ml-2 mr-2" style="width:550px; border-style: none; box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1); "> 
+            <div class="row no-gutters" style="display: flex; align-items: center; justify-content: center; ">
+              <div class="col-lg-4">
+                <img class="card-img-top" src="{{member.ID_photo_path_text}}" alt="Card image" style="max-height: 200px; width: 150px; --hover-image: url({{member.second_photo_path}})">
+              </div>
+              <div class="col-lg-8">
+                <div class="card-body">
+                  <!-- <h4 class="card-title" style="justify-content: left; display: inline;">{{member.name_text}}</h4>
+                  <p style="justify-content: left; display: inline; text-align: left;"><span class="badge badge-dark">{{member.degree}}</span></p> -->
+                  <h3 class="card-title" style="text-align: left; font-weight: 800;">{{member.name_text}}</h3>
+                  <h5 style="text-align: left;"><span class="badge badge-dark">{{member.degree}}</span></h5>
+                  <p class="card-text" style="font-size: 0.9em; text-align: left;">{{member.department}}</p>
+                  <hr class="dropdown-divider">
 
-                <p class="card-text" style="font-weight:bold; ">{{member.one_sentence_text}}</p>
-                <hr class="dropdown-divider">
-                <p class="card-text" style="font-size: 0.9em;"><i class="fa fa-solid fa-envelope"></i>      {{member.email}}</p>
-                  
-
+                  <p class="card-text" style="text-align: left;"><i class="fa fa-solid fa-comment"></i>&nbsp&nbsp{{member.one_sentence_text}}</p>
+                  <p class="card-text" style="font-size: 1em; text-align: left;"><i class="fa fa-solid fa-envelope"></i>&nbsp&nbsp{{member.email}}</p>
+                    
+                </div>
               </div>
             </div>
           </div>
@@ -73,5 +87,19 @@
     </div>
   </div>
   <script src="https://example.com/fontawesome/v5.15.4/js/all.js" data-auto-a11y="true" ></script>
+  <script>
+    function change_btn(e){
+      var btns = document.querySelectorAll(".degree-button");
+      btns.forEach(function (btn, i) {
+      if (e.currentTarget == btn) {
+        btn.classList.add("active");
+      } else {
+        btn.classList.remove("active");
+      }
+    });
+    console.log(e.currentTarget);
+    }
+
+  </script>
 
 {% endblock %}  
