allowed hosts update

--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -233,6 +233,10 @@
               <p class="text-muted"> (+82) 032-820-4253</p>
             </li>
             <li class="text-muted" style="font-size:medium; display: flex; align-items: baseline;" >
+              <span style="padding-right: 10px;"><i class="fas fa-print text-muted"></i></span> 
+              <p class="text-muted"> (+82) 032-820-4449</p>
+            </li>
+            <li class="text-muted" style="font-size:medium; display: flex; align-items: baseline;" >
               <span style="padding-right: 10px;"><i class="fas fa-paper-plane text-muted"></i></span> 
               <p class="text-muted"> Jungsuk@gachon.ac.kr</p>
             </li>
@@ -263,6 +267,7 @@
 
     </footer>
     </div>
+    
     <!-- <div class="footer-wrap "> 
       <footer class="container py-5">
         <div class="row">
@@ -284,6 +289,10 @@
                 <span style="padding-right: 10px;"><i class="fas fa-paper-plane text-muted"></i></span> 
                 <p class="text-muted"> Jungsuk@gachon.ac.kr</p>
               </li>
+              <li class="text-muted" style="font-size:medium; display: flex; align-items: baseline;" >
+              <span style="padding-right: 10px;"><i class="fas fa-paper-plane text-muted"></i></span> 
+              <p class="text-muted"> Jungsuk@gachon.ac.kr</p>
+            </li>
             </ul>
           </div>
         
