[Fix] member admin - DB 수정 후, 다른 파일에도 변경

--- a/labweb/member/templates/member/member.html
+++ b/labweb/member/templates/member/member.html
@@ -15,7 +15,7 @@
     {% for member in member_list %}
     <div class="photo">
       <a href="/" class="img_member"><img src={{member.ID_photo_path_text}}/></a>
-      <div class="nameTag">{{member.name_text}}</div>
+      <div class="nameTag">{{member.name}}</div>
     </div>
     {% endfor %}
   {% endif %}
