[DB] create <project> entity

--- a/labweb/templates/labweb/member.html
+++ b/labweb/templates/labweb/member.html
@@ -67,7 +67,7 @@
           <div class="card mb-2 ml-2 mr-2" style="width:500px; border-style: none; box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1); "> 
             <div class="row no-gutters" style="display: flex; align-items: center; justify-content: center; ">
               <div class="col-lg-4">
-                <img class="card-img-top" src="{{member.main_photo}}" alt="Card image" style="max-height: 200px; width: 150px; --hover-image: url({{member.hobby_photo}})">
+                <img class="card-img-top" src="{{member.main_photo.url}}" alt="Card image" style="max-height: 200px; width: 150px; --hover-image: url({{member.hobby_photo.url}})">
               </div>
               <div class="col-lg-8">
                 <div class="card-body">
@@ -104,7 +104,7 @@
           <div class="card mb-3 ml-2 mr-2" style="width:500px; border-style: none; box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1); "> 
             <div class="row no-gutters" style="display: flex; align-items: center; justify-content: center; ">
               <div class="col-lg-4">
-                <img class="card-img-top" src="{{member.main_photo}}" alt="Card image" style="max-height: 200px; width: 150px; --hover-image: url({{member.hobby_photo}})">
+                <img class="card-img-top" src="{{member.main_photo.url}}" alt="Card image" style="max-height: 200px; width: 150px; --hover-image: url({{member.hobby_photo.url}})">
               </div>
               <div class="col-lg-8">
                 <div class="card-body">
